<resources>
    <string name="app_name">SM Dandelion Test</string>
    <string name="input_text">Input</string>
    <string name="response">Response</string>
    <string name="server_response">Server Response</string>
    <string name="server_address">Server Address</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="status">Status</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="connection_fail">Connection Fail</string>
    <string name="connecting">Connecting</string>
    <string name="send">Send</string>
</resources>
